--- a/src/pages/EcoNutriWeightPage/EcoNutriWeightPage.module.css
+++ b/src/pages/EcoNutriWeightPage/EcoNutriWeightPage.module.css
@@ -1,7 +1,12 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  gap: 20px;
 }
 
+.Button {
+  margin-bottom: 3rem;
+}
