--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 .header {
   position: sticky;
-  left: 0;
   top: 0;
+  left: 50%;
+  max-width: var(--breakpoint-xs);
   width: 100%;
-  padding: var(--space-md) var(--space-sm);
+  padding: var(--space-xs);
   justify-content: center;
   font-size: var(--font-lg);
   background: var(--primary-bg);
