--- a/src/pages/ResultPage/ResultPage.module.css
+++ b/src/pages/ResultPage/ResultPage.module.css
@@ -64,6 +64,13 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+  overflow: hidden;
+}
+
+.productIcon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .iconInner {
