--- a/src/pages/UserMainPage/UserMainPage.module.css
+++ b/src/pages/UserMainPage/UserMainPage.module.css
@@ -63,6 +63,8 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .recentTitle {
